force-app/main/default/objects/Certification_Rating__c/Certification_Rating__c.object-meta.xml
<CustomObject>
    <description>Object used to store the certification question</description>
    <label>Certification Rating</label>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>