force-app/main/default/objects/Certification_Rating__c/fields/Display_Custom_Metric__c.field-meta.xml
<CustomField>
    <fullName>Display_Custom_Metric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used from display of custom metrics</description>
    <label>Display Custom Metric</label>
    <type>Checkbox</type>
</CustomField>