force-app/main/default/objects/Certification_Rating__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Close Rate</fullName>
            </value>
            <value>
                <fullName>Qualified Opportunities Added</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Custom Metrics</fullName>
            </value>
            <value>
                <fullName>Sales Cycle</fullName>
            </value>
            <value>
                <fullName>Deal Size</fullName>
            </value>
            <value>
                <fullName>Win Size</fullName>
            </value>
            <value>
                <fullName>Opportunities Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>