force-app/main/default/objects/Certification_Rating__c/fields/Reverse_Buckets__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Buckets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Buckets</label>
    <type>Checkbox</type>
</CustomField>