force-app/main/default/objects/Certification_Rating__c/fields/Training_Url__c.field-meta.xml
<CustomField>
    <fullName>Training_Url__c</fullName>
    <label>Training Url</label>
    <type>Url</type>
</CustomField>