force-app/main/default/objects/Certification_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Important_flag__c</columns>
    <columns>Timing__c</columns>
    <columns>User_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Deactivated__c</columns>
    <columns>Group__c</columns>
    <columns>Goal_field_name__c</columns>
    <columns>Metric_Field_Name__c</columns>
    <columns>Assessment_type__c</columns>
    <columns>Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_type__c</field>
        <operation>equals</operation>
        <value>Quantitative</value>
    </filters>
    <label>All</label>
</ListView>